<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clearbutton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="clickClear"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/billtotal"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/bill_total_with_tax"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/billtotalvalue"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#E6FFE6"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textAlignment="viewEnd"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberofpeople"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/number_of_people"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalwithtip" />

    <EditText
        android:id="@+id/numberofpeopleanswer"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:background="#E6FFE6"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/gobutton"
        app:layout_constraintTop_toBottomOf="@+id/totalwithtip" />

    <Button
        android:id="@+id/gobutton"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-light"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="doCalculation"
        android:text="@string/go"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalwithtipvalue" />

    <TextView
        android:id="@+id/tippercent"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/tip_percent"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billtotal" />

    <RadioGroup
        android:id="@+id/radiogroupX"
        android:layout_width="332dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tippercent">

        <RadioButton
            android:id="@+id/tiponetwo"
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:buttonTint="#FF6200EE"
            android:fontFamily="sans-serif-light"
            android:onClick="radioClickActivity"
            android:text="@string/tiptwelve"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/tiponefive"
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:buttonTint="#FF6200EE"
            android:fontFamily="sans-serif-light"
            android:onClick="radioClickActivity"
            android:text="@string/tipfifteen"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/tiponeeight"
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:buttonTint="#FF6200EE"
            android:fontFamily="sans-serif-light"
            android:onClick="radioClickActivity"
            android:text="@string/tipeighteen"
            android:textAlignment="viewStart"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/tiptwozero"
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:buttonTint="#FF6200EE"
            android:fontFamily="sans-serif-light"
            android:onClick="radioClickActivity"
            android:text="@string/tiptwenty"
            android:textSize="22sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tipamount"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/tip_amount"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tippercent" />

    <TextView
        android:id="@+id/totalwithtip"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/total_with_tip"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipamount" />

    <EditText
        android:id="@+id/tipamountvalue"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:background="#D3D3D3"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="sans-serif-light"
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tippercent"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/totalwithtipvalue"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#CCCCCC"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="sans-serif-light"
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipamountvalue"
        tools:ignore="Deprecated" />

    <TextView
        android:id="@+id/totalperperson"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:focusable="false"
        android:fontFamily="sans-serif-light"
        android:text="@string/total_per_person"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberofpeople" />

    <TextView
        android:id="@+id/overage"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/overage"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalperperson" />

    <EditText
        android:id="@+id/overagevalue"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#CCCCCC"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="sans-serif-light"
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalperpersonvalue" />

    <Button
        android:id="@+id/button2"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginTop="530dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="clickClear"
        android:text="@string/clear"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/totalperpersonvalue"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#CCCCCC"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="sans-serif-light"
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberofpeopleanswer" />

</androidx.constraintlayout.widget.ConstraintLayout>